version/0.30/_sources/api/solver/_autosummary/settings/porous_jump_1.rst.txt
:orphan:

.. _porous_jump_1:

porous_jump
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.porous_jump_1
    :show-inheritance:

.. rubric:: Attributes

========================================================================   =======================================

Attribute                                                                                                  Summary

========================================================================   =======================================
:ref:`porous_jump_turb_wall_treatment <porous_jump_turb_wall_treatment>`            Enable/disable Wall Treatment.

:ref:`alpha <alpha>`                                                                            Face Permeability.

:ref:`dm <dm>`                                                                            Porous Medium Thickness.

:ref:`c2 <c2_1>`                                                                   Pressure-Jump Coefficient (C2).

:ref:`thermal_ctk <thermal_ctk>`                                                       Thermal Contact Resistance.

:ref:`solar_fluxes <solar_fluxes>`                                             Participates in Solar Ray Tracing?.

:ref:`v_absp <v_absp>`                                                              Direct Visible (Absorptivity).

:ref:`ir_absp <ir_absp>`                                                                 Direct IR (Absorptivity).

:ref:`ir_trans <ir_trans>`                                                             Direct IR (Transmissivity).

:ref:`v_trans <v_trans>`                                                          Direct Visible (Transmissivity).

:ref:`strength <strength>`                                                                               Strength.

:ref:`jump_adhesion <jump_adhesion>`                                                                Jump Adhesion.

:ref:`adhesion_constrained <adhesion_constrained>`                                 Constrained Two-Sided Adhesion.

:ref:`contact_angles <contact_angles>`                                                       Contact angle values.

:ref:`x_disp_boundary_condition <x_disp_boundary_condition>`                    X-Displacement Boundary Condition.

:ref:`x_disp_boundary_value <x_disp_boundary_value>`                                X-Displacement Boundary value.

:ref:`y_disp_boundary_condition <y_disp_boundary_condition>`                    Y-Displacement Boundary Condition.

:ref:`y_disp_boundary_value <y_disp_boundary_value>`                                Y-Displacement Boundary Value.

:ref:`z_disp_boundary_condition <z_disp_boundary_condition>`                    Z-Displacement Boundary Condition.

:ref:`z_disp_boundary_value <z_disp_boundary_value>`                                Z-Displacement Boundary Value.

========================================================================   =======================================

.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

:ref:`phase_16_child <phase_16_child>`                   'child_object_type' of phase.

:ref:`settings_19 <settings_19>`                    Domain name to define settings on.

:ref:`phase_42_child <phase_42_child>`                   'child_object_type' of phase.

============================================   =======================================

